fix copyright on mobile

--- a/styles/about-page/main.module.css
+++ b/styles/about-page/main.module.css
@@ -287,4 +287,8 @@
     #heroButtonSection {
         margin-top: 48px;
     }
+
+    .copyrightBox {
+        position: unset;
+    }
 }
